peac_dev/force-app/main/default/objects/Tax_Jurisdiction_Mapping__mdt/Tax_Jurisdiction_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Tax Jurisdiction Mapping</label>
    <pluralLabel>Tax Jurisdiction Mappings</pluralLabel>
</CustomObject>