peac_dev/force-app/main/default/objects/Tax_Jurisdiction_Mapping__mdt/fields/City_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>City_Code_Field__c</fullName>
    <label>City Code Field</label>
    <metadataRelationshipControllingField>Tax_Jurisdiction_Mapping__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Jurisdiction_Mappings5</relationshipLabel>
    <relationshipName>Tax_Jurisdiction_Mappings5</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>