peac_dev/force-app/main/default/objects/Tax_Jurisdiction_Mapping__mdt/fields/County_Field__c.field-meta.xml
<CustomField>
    <fullName>County_Field__c</fullName>
    <label>County Field</label>
    <metadataRelationshipControllingField>Tax_Jurisdiction_Mapping__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Jurisdiction_Mappings</relationshipLabel>
    <relationshipName>Tax_Jurisdiction_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>