peac_dev/force-app/main/default/objects/Tax_Jurisdiction_Mapping__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Tax_Jurisdiction_Mappings</relationshipLabel>
    <relationshipName>Tax_Jurisdiction_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>