peac_dev/force-app/main/default/objects/Tax_Jurisdiction_Mapping__mdt/fields/State_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>State_Code_Field__c</fullName>
    <label>State Code Field</label>
    <metadataRelationshipControllingField>Tax_Jurisdiction_Mapping__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Jurisdiction_Mappings7</relationshipLabel>
    <relationshipName>Tax_Jurisdiction_Mappings7</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>