peac_dev/force-app/main/default/objects/Tax_Jurisdiction_Mapping__mdt/fields/Zip_Field__c.field-meta.xml
<CustomField>
    <fullName>Zip_Field__c</fullName>
    <label>Zip Field</label>
    <metadataRelationshipControllingField>Tax_Jurisdiction_Mapping__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Jurisdiction_Mappings3</relationshipLabel>
    <relationshipName>Tax_Jurisdiction_Mappings3</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>